// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checks that InfoTooltip snapshots don't change > renders correctly 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      aria-label="label"
      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-kpimro-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>
</body>
`;

exports[`Checks that InfoTooltip snapshots don't change > renders the tooltip message correctly while hovering 1`] = `
<body>
  <div>
    <svg
      aria-hidden="true"
      aria-label="label"
      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-kpimro-MuiSvgIcon-root"
      data-mui-internal-clone-element="true"
      data-testid="InfoIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
      />
    </svg>
  </div>
  <div
    class="MuiTooltip-popper MuiTooltip-popperInteractive css-yem0l2-MuiPopper-root-MuiTooltip-popper MuiPopperUnstyled-root"
    data-popper-escaped=""
    data-popper-placement="bottom"
    data-popper-reference-hidden=""
    id=":r1:"
    role="tooltip"
    style="position: absolute; top: 0px; left: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <div
      class="MuiTooltip-tooltip MuiTooltip-tooltipPlacementBottom css-ja5taz-MuiTooltip-tooltip"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 133ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      label
    </div>
  </div>
</body>
`;
